--- a/02/index2.html
+++ b/02/index2.html
@@ -9,7 +9,7 @@
     <h1>Paragrafos e quebras de linhas</h1>
     <hr>
     <p>Zacarias king zaca 
-        é melhor de todos kakaka
+        é  o melhor de todos kakaka
         
     </p> 
     <p>&reg;
